Fixes up select spacing above

--- a/app/assets/stylesheets/base/_controls.scss
+++ b/app/assets/stylesheets/base/_controls.scss
@@ -133,7 +133,7 @@ select {
   height: $input-size;
   overflow: hidden; 
   white-space: nowrap; 
-  margin-top: -2px;
+  margin-top: -3px;
   vertical-align: middle;
   
   &:hover {
